--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Web-Data-Capturing.xaml\",\"Desktop-Data-Capturing.xaml\",\"Main.xaml\"]"}
+{"ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\",\"Web-Data-Capturing.xaml\"]"}
